@@ -18,6 +18,7 @@
 package com.axelixlabs.axelix.common.auth.core;
 
 import java.util.Collections;
+import java.util.Objects;
 import java.util.Set;
 
 /**
@@ -27,18 +28,54 @@ import java.util.Set;
  * @since 16.07.25
  * @author Mikhail Polivakha
  */
-public record DefaultRole(String name, Set<Authority> authorities, Set<Role> components) implements Role {
+public final class DefaultRole implements Role {
 
-    public DefaultRole(String name, Set<Authority> authorities) {
-        this(name, authorities, Set.of());
+    private final String name;
+    private final Set<Authority> authorities;
+    private final Set<Role> components;
+
+    public DefaultRole(String name, Set<Authority> authorities, Set<Role> components) {
+        this.name = name;
+        this.authorities = authorities != null ? authorities : Collections.emptySet();
+        this.components = components != null ? components : Collections.emptySet();
     }
 
-    public DefaultRole {
-        if (authorities == null) {
-            authorities = Collections.emptySet();
-        }
-        if (components == null) {
-            components = Collections.emptySet();
-        }
+    public DefaultRole(String name, Set<Authority> authorities) {
+        this(name, authorities, Collections.emptySet());
+    }
+
+    @Override
+    public String name() {
+        return name;
+    }
+
+    @Override
+    public Set<Authority> authorities() {
+        return authorities;
+    }
+
+    @Override
+    public Set<Role> components() {
+        return components;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        DefaultRole that = (DefaultRole) o;
+        return Objects.equals(name, that.name)
+                && Objects.equals(authorities, that.authorities)
+                && Objects.equals(components, that.components);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(name, authorities, components);
+    }
+
+    @Override
+    public String toString() {
+        return "DefaultRole[" + "name=" + name + ", authorities=" + authorities + ", components=" + components + ']';
     }
 }
